--- a/assets/jade/base.jade
+++ b/assets/jade/base.jade
@@ -7,6 +7,7 @@ html(ng-app='familyfound')
     link(rel="icon", type="image/png", href="/favicon.png")
     block css
       link(href="/css/build.css", rel="stylesheet", media="screen")
+    script(src="/socket.io/socket.io.js")
   body
     block body
     block endjs
